Ajustando swagger da applicacao e atualizando o remover da applicacao
