# src/main/java/com/restservice/controller/ApplicationController.java
@@ -17,39 +17,42 @@ public class ApplicationController {
 
     private final Service<Cliente> clienteService;
 
-    @PostMapping("/inserir")
+    @PostMapping("/inserirclientes")
     public ResponseEntity<SucessoResponse> criarCliente(@NonNull @RequestBody Cliente cliente) {
-            clienteService.inserir(cliente);
+            clienteService.inserirCliente(cliente);
             return new ResponseEntity<>(SucessoResponse.builder().message("Cliente salvo com sucesso").build(), HttpStatus.OK);
     }
 
-    @PutMapping("/atualizarcliente")
+    @DeleteMapping("/removerclientes/{idRemoveClientePath}")
+    public ResponseEntity<SucessoResponse>  removerCliente(@PathVariable (value = "idRemoveClientePath" , required = true) String idRemoveClientePath) {
+        Cliente cliente = new Cliente();
+        cliente.setId(idRemoveClientePath);
+
+        clienteService.removerCliente(cliente);
+        return new ResponseEntity<>(SucessoResponse.builder().message("Cliente removido com sucesso").build(), HttpStatus.OK);
+    }
+
+    @PutMapping("/atualizarclientes")
     public ResponseEntity<SucessoResponse>  atualizarCliente(@NonNull @RequestBody Cliente cliente) {
         clienteService.atualizarCliente(cliente);
         return new ResponseEntity<>(SucessoResponse.builder().message("Cliente Atualizado com sucesso").build(), HttpStatus.OK);
     }
 
-    @PutMapping("/atualizarendereco")
+    @PutMapping("/atualizarenderecos")
     public ResponseEntity<SucessoResponse>  atualizarEndereco(@NonNull @RequestBody Cliente cliente) {
         clienteService.atualizarEndereco(cliente);
         return new ResponseEntity<>(SucessoResponse.builder().message("Endereco Atualizado com sucesso").build(), HttpStatus.OK);
     }
 
-    @DeleteMapping("/removerclientes")
-    public ResponseEntity<SucessoResponse>  removerCliente(@NonNull @RequestBody Cliente cliente) {
-        clienteService.remover(cliente);
-        return new ResponseEntity<>(SucessoResponse.builder().message("Cliente removido com sucesso").build(), HttpStatus.OK);
-    }
-
-    @GetMapping("/buscarclientecpf")
-    public ResponseEntity<Cliente>  buscarClienteCpf(@NonNull @RequestBody Cliente cliente) {
-        final var retorno = clienteService.buscarPorCpf(cliente);
+    @GetMapping("/buscarclientescpf")
+    public ResponseEntity<Cliente>  buscarClienteCPF(@NonNull @RequestBody Cliente cliente) {
+        final var retorno = clienteService.buscarClienteCpf(cliente);
         return new ResponseEntity<>(retorno, HttpStatus.OK);
     }
 
-    @GetMapping("/buscar")
-    public ResponseEntity<List<Cliente>>  buscar() {
-        final var retorno = clienteService.buscarTodos();
+    @GetMapping("/buscarclientes")
+    public ResponseEntity<List<Cliente>>  buscarClientes() {
+        final var retorno = clienteService.buscarClientes();
         return new ResponseEntity<>(retorno, HttpStatus.OK);
     }
 }
